# simple_translate

./: .gitignore  CLAUDE.md  LICENSE  README.md  TEST_PLAN.md  components.json  package-lock.json  package.json  settings.html  vite.config.ts
.claude/sessions/: 4e4c594c-a7b5-4859-9ad2-28c56e3f1478.jsonl
docs/: help.md
src/: App.tsx  Settings.tsx  index.css  settings-main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
