[package]
name = "simple_translate"
version = "1.0.0"
description = "Simple Translate - Windows Desktop Translation Tool"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "simple_translate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-clipboard-manager = "2.3.2"
reqwest = { version = "0.13.1", features = ["json"] }
enigo = "0.6.1"
arboard = "3.6.1"
log = "0.4.29"
env_logger = "0.11.8"
rdev = "0.5.3"
tauri-plugin-store = "2"
once_cell = "1.19"
tokio = { version = "1", features = ["sync"] }

[target.'cfg(windows)'.dependencies]
window-vibrancy = "0.5"
